--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ footer-links:
 
 footer-text: Copyright (c) 2024 Mengke
 
+site:
+  title: "Mengke's Blog"
+
 url: https://mengke25.github.io
 
 permalink: /:title/
