--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ footer-links:
 footer-text: Copyright (c) 2024 Mengke
 
 site:
-  title: "Mengke's Blog"
+  name: "mengke25.github.io"
+  title: "mengke25.github.io"
 
 url: https://mengke25.github.io
 
