--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Mengke's blog"
 description: "Mengke的个人博客"
 
-avatar: https://mengke25.github.io/images/avatar.png
+avatar: https://mengke25.github.io/images/profile.png
 favicon: https://mengke25.github.io/images/favicon.ico
 
 navigation:
