--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Mengke's blog"
-description: "Mengke的个人博客"
+description: ""
 
 avatar: https://mengke25.github.io/images/profile.png
 favicon: https://mengke25.github.io/images/favicon.ico
