--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Mengke's blog"
-description: "mengke的博客"
+description: "PhD candidate, Economics, UIBE."
 
 avatar: https://mengke25.github.io/images/profile.png
 favicon: https://mengke25.github.io/images/favicon.ico
